--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ npm-debug.log
 /data
 /dashboard/apos-build
 /dashboard/public/apos-frontend
+/dashboard/module/asset/ui/public
 /sites/apos-build
 /sites/public/apos-frontend
+/sites/modules/theme-default/ui/public
 */public/modules
 */public/uploads
 */public/svgs/*.svg
