--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a3-assembly-project-boilerplate",
+  "name": "a3-assembly-boilerplate",
   "version": "1.0.0",
   "description": "A starting point for A3 enterprise multisite projects",
   "private": true,
