--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "a3-assembly-project-boilerplate",
+  "name": "a3-assembly-boilerplate",
   "version": "1.0.0",
-  "description": "A starting point for A3 enterprise multisite projects",
+  "description": "A boilerplate for multisite content-management in A3",
   "private": true,
   "scripts": {
     "build": "NODE_ENV=production webpack",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apostrophecms/a3-assembly-project-boilerplate"
+    "url": "https://github.com/apostrophecms/a3-assembly-boilerplate"
   },
   "engines": {
     "node": ">=10.0.0"
