better layout, removed some styles

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
+    "@apostrophecms-pro/basics": "github:apostrophecms/basics#initial",
+    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite",
+    "@apostrophecms-pro/palette": "github:apostrophecms/palette",
+    "@apostrophecms/palette": "github:apostrophecms/palette",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite",
     "apostrophe": "github:apostrophecms/apostrophe#3.0",
-    "@apostrophecms-pro/basics": "github:apostrophecms/basics#initial",
-    "@apostrophecms-pro/palette": "github:apostrophecms/palette",
     "babel-loader": "^8.2.2",
     "concurrently": "^3.5.1",
     "css-loader": "^5.0.1",
