--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "github:apostrophecms/basics#initial",
+    "@apostrophecms-pro/basics": "github:apostrophecms/basics",
     "@apostrophecms-pro/multisite": "github:apostrophecms/multisite",
     "@apostrophecms-pro/palette": "github:apostrophecms/palette",
     "@babel/core": "^7.12.10",
