all npm dependenies

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "github:apostrophecms/basics",
-    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite",
-    "@apostrophecms-pro/palette": "github:apostrophecms/palette",
+    "@apostrophecms-pro/basics": "alpha",
+    "@apostrophecms-pro/multisite": "alpha",
+    "@apostrophecms-pro/palette": "alpha",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "apostrophe": "github:apostrophecms/apostrophe#3.0",
+    "apostrophe": "alpha",
     "babel-loader": "^8.2.2",
     "concurrently": "^3.5.1",
     "css-loader": "^5.0.1",
