develop branch should depend on git

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "1.0.0-alpha.2",
-    "@apostrophecms-pro/multisite": "3.0.0-alpha.3",
-    "@apostrophecms-pro/palette": "3.0.0-alpha.2",
+    "@apostrophecms-pro/basics": "github:apostrophecms/basics",
+    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite",
+    "@apostrophecms-pro/palette": "github:apostrophecms/palette",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "apostrophe": "3.0.0-alpha.5",
+    "apostrophe": "github:apostrophecms/apostrophe#3.0",
     "babel-loader": "^8.2.2",
     "concurrently": "^3.5.1",
     "css-loader": "^5.0.1",
