--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-cli": "^4.4.0"
   },
   "devDependencies": {
+    "stylelint-config-punkave": "^1.1.3",
     "webpack-dev-server": "^3.11.2"
   }
 }
