--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "^1.0.0-alpha.3",
-    "@apostrophecms-pro/multisite": "^3.0.0-alpha.4",
-    "@apostrophecms-pro/palette": "^3.0.0-alpha.3",
+    "@apostrophecms-pro/basics": "^1.0.0-alpha.3.1",
+    "@apostrophecms-pro/multisite": "^3.0.0-alpha.5",
+    "@apostrophecms-pro/palette": "^3.0.0-alpha.4",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "apostrophe": "^3.0.0-alpha.6",
+    "apostrophe": "^3.0.0-alpha.7",
     "babel-loader": "^8.2.2",
     "concurrently": "^3.5.1",
     "css-loader": "^5.0.1",
@@ -38,6 +38,7 @@
     "webpack-cli": "^4.4.0"
   },
   "devDependencies": {
+    "stylelint-config-punkave": "^1.1.3",
     "webpack-dev-server": "^3.11.2"
   }
 }
