develop depends on git for apostrophe itself

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@apostrophecms-pro/palette": "^3.0.0-alpha.4",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "apostrophe": "^3.0.0-alpha.7",
+    "apostrophe": "github:apostrophecms/apostrophe",
     "babel-loader": "^8.2.2",
     "concurrently": "^3.5.1",
     "css-loader": "^5.0.1",
