PRO-1101 supports static assets in uploadfs, "npm run build" and "npm run start" are genuinely suitable for staging and production use

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ npm-debug.log
 /dashboard/modules/asset/ui/public
 /sites/apos-build
 /sites/public/apos-frontend
-/sites/modules/theme-default/ui/public
+/sites/modules/theme-*/ui/public
 */public/modules
 */public/uploads
 */public/svgs/*.svg
