--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "a3-assembly-boilerplate",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A boilerplate for multisite content-management in A3",
   "private": true,
   "scripts": {
-    "build": "APOS_UPLOADFS_ASSETS=1 NODE_ENV=production bash -c 'npx webpack && node app @apostrophecms/asset:build --site=dashboard && ./scripts/for-each-theme @apostrophecms/asset:build'",
+    "build": "APOS_UPLOADFS_ASSETS=1 NODE_ENV=production bash -c 'node app @apostrophecms/asset:build --site=dashboard && ./scripts/for-each-theme @apostrophecms/asset:build'",
     "start": "APOS_UPLOADFS_ASSETS=1 NODE_ENV=production node app",
-    "dev": "(ENV=dev node app @apostrophecms/asset:build --site=dashboard && ENV=dev ./scripts/for-each-theme @apostrophecms/asset:build) && ENV=dev webpack serve & ENV=dev node app"
+    "dev": "(ENV=dev node app @apostrophecms/asset:build --site=dashboard && ENV=dev ./scripts/for-each-theme @apostrophecms/asset:build) && ENV=dev node app"
   },
   "repository": {
     "type": "git",
@@ -21,24 +21,12 @@
     "@apostrophecms-pro/basics": "^1.0.0-alpha.3.1",
     "@apostrophecms-pro/multisite": "^3.0.0-alpha.8",
     "@apostrophecms-pro/palette": "^3.0.0-alpha.6",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "apostrophe": "^3.0.0-beta.3",
-    "babel-loader": "^8.2.2",
-    "concurrently": "^3.5.1",
-    "css-loader": "^5.0.1",
-    "mini-css-extract-plugin": "^1.3.4",
+    "apostrophe": "^3.0.0",
     "node-fetch": "^2.6.1",
-    "node-sass": "^4.11.0",
     "qs": "^6.9.6",
-    "require-all": "^3.0.0",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.16.0",
-    "webpack-cli": "^4.4.0"
+    "require-all": "^3.0.0"
   },
   "devDependencies": {
-    "stylelint-config-punkave": "^1.1.3",
-    "webpack-dev-server": "^3.11.2"
+    "stylelint-config-punkave": "^1.1.3"
   }
 }
