--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "1.2.0",
   "description": "A boilerplate for multisite content-management in A3",
   "private": true,
+  "nodemonConfig": {
+    "delay": 1000,
+    "verbose": true,
+    "watch": [
+      "./app.js",
+      "./modules/**/*",
+      "./lib/**/*.js",
+      "./views/**/*.html"
+    ]
+  },
   "scripts": {
     "build": "APOS_UPLOADFS_ASSETS=1 NODE_ENV=production bash -c 'node app @apostrophecms/asset:build --site=dashboard && ./scripts/for-each-theme @apostrophecms/asset:build'",
     "start": "APOS_UPLOADFS_ASSETS=1 NODE_ENV=production node app",
-    "dev": "(ENV=dev node app @apostrophecms/asset:build --site=dashboard && ENV=dev ./scripts/for-each-theme @apostrophecms/asset:build) && ENV=dev node app"
+    "dev": "(ENV=dev nodemon --delay 1000ms -x \"node app.js\""
   },
   "repository": {
     "type": "git",
@@ -18,11 +28,12 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "^1.0.0-alpha.3.1",
-    "@apostrophecms-pro/multisite": "^3.0.0-alpha.8",
-    "@apostrophecms-pro/palette": "^3.0.0-alpha.6",
-    "apostrophe": "^3.0.0",
+    "@apostrophecms-pro/basics": "git+ssh://git@github.com/apostrophecms/basics",
+    "@apostrophecms-pro/multisite": "git+ssh://git@github.com/apostrophecms/multisite",
+    "@apostrophecms-pro/palette": "git+ssh://git@github.com/apostrophecms/palette",
+    "apostrophe": "github:apostrophecms/apostrophe",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "qs": "^6.9.6",
     "require-all": "^3.0.0"
   },
