--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "git+ssh://git@github.com/apostrophecms/basics",
-    "@apostrophecms-pro/multisite": "git+ssh://git@github.com/apostrophecms/multisite",
-    "@apostrophecms-pro/palette": "git+ssh://git@github.com/apostrophecms/palette",
-    "apostrophe": "github:apostrophecms/apostrophe",
+    "@apostrophecms-pro/basics": "^1.0.0-alpha.3.1",
+    "@apostrophecms-pro/multisite": "^3.0.0-alpha.9",
+    "@apostrophecms-pro/palette": "^3.0.0-alpha.7",
+    "apostrophe": "^3.1.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
