--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "//": "because nodemon insists on executing 'start' if it exists, we must distinguish production",
     "production-start": "APOS_UPLOADFS_ASSETS=1 NODE_ENV=production npm run start",
     "start": "node app",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "eslint . && stylelint ."
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,8 @@
     "require-all": "^3.0.0"
   },
   "devDependencies": {
-    "stylelint-config-punkave": "^1.1.3"
+    "eslint": "^7.25.0",
+    "eslint-config-apostrophe": "^3.4.0",
+    "stylelint-config-apostrophe": "^1.0.1"
   }
 }
