--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "git+ssh://git@github.com/apostrophecms/basics.git",
-    "@apostrophecms-pro/multisite": "git+ssh://git@github.com/apostrophecms/multisite.git",
-    "@apostrophecms-pro/palette": "git+ssh://git@github.com/apostrophecms/palette.git",
-    "apostrophe": "github:apostrophecms/apostrophe",
+    "@apostrophecms-pro/basics": "^1.0.0",
+    "@apostrophecms-pro/multisite": "^3.0.0-alpha.9",
+    "@apostrophecms-pro/palette": "^3.0.0-alpha.7",
+    "apostrophe": "^3.1.2",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.12",
     "qs": "^6.9.6",
     "require-all": "^3.0.0"
   },
