see if I can clear up what's happening on the dashboard login page while I wait for the PR to go through on multisite

--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "git+ssh://git@github.com/apostrophecms/basics.git",
-    "@apostrophecms-pro/multisite": "git+ssh://git@github.com/apostrophecms/multisite.git",
-    "@apostrophecms-pro/palette": "git+ssh://git@github.com/apostrophecms/palette.git",
-    "apostrophe": "github:apostrophecms/apostrophe",
+    "@apostrophecms-pro/basics": "^1.0.1-rc.1",
+    "@apostrophecms-pro/multisite": "^3.0.0-alpha.9",
+    "@apostrophecms-pro/palette": "^3.0.0-alpha.7",
+    "apostrophe": "^3.0.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
