--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "^1.0.1-rc.1",
-    "@apostrophecms-pro/multisite": "^3.0.0-alpha.10",
+    "@apostrophecms-pro/basics": "^1.2.1",
+    "@apostrophecms-pro/multisite": "^3.0.0",
     "@apostrophecms-pro/palette": "^3.0.0-alpha.9",
-    "apostrophe": "^3.0.0",
+    "apostrophe": "^3.4.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
