--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@apostrophecms-pro/basics": "^1.2.1",
-    "@apostrophecms-pro/multisite": "^3.0.0",
-    "@apostrophecms-pro/palette": "^3.0.0-alpha.10",
+    "@apostrophecms-pro/multisite": "^3.0.1",
+    "@apostrophecms-pro/palette": "^3.0.0-beta.1",
     "apostrophe": "^3.5.0",
     "node-fetch": "^2.6.5",
     "nodemon": "^2.0.7",
