--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@apostrophecms-pro/multisite": "^3.0.1",
     "@apostrophecms-pro/palette": "^3.0.0-beta.1",
     "apostrophe": "^3.5.0",
+    "mongodb": "^3.7.3",
     "node-fetch": "^2.6.5",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
