--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "@apostrophecms-pro/basics": "^1.2.1",
     "@apostrophecms-pro/multisite": "^3.2.0",
-    "@apostrophecms-pro/palette": "^3.0.0-beta.1",
-    "apostrophe": "^3.9.0",
+    "@apostrophecms-pro/palette": "^3.0.0",
+    "apostrophe": "^3.11.0",
     "node-fetch": "^2.6.6",
     "nodemon": "^2.0.15",
     "qs": "^6.10.2",
