--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "1.2.1-prerelease-2021-12-22-001",
-    "@apostrophecms-pro/multisite": "3.2.0-prerelease-2021-12-22-001",
-    "@apostrophecms-pro/palette": "3.0.0-beta.2-prerelease-2021-12-22-001",
-    "apostrophe": "3.9.0-prerelease-2021-12-22-001",
+    "@apostrophecms-pro/basics": "1.2.1-alpha.2022-01-20-001",
+    "@apostrophecms-pro/multisite": "3.2.0-alpha.2022-01-20-001",
+    "@apostrophecms-pro/palette": "3.0.0-alpha.2022-01-20-001",
+    "apostrophe": "3.11.0-alpha.2022-01-20-001",
     "node-fetch": "^2.6.5",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
