--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "1.2.1-alpha.2022-02-04-001",
-    "@apostrophecms-pro/multisite": "3.2.1-alpha.2022-02-04-001",
-    "@apostrophecms-pro/palette": "3.0.0-alpha.2022-02-04-001",
-    "apostrophe": "3.13.0-alpha.2022-02-04-001",
+    "@apostrophecms-pro/basics": "1.2.1-alpha.20220401",
+    "@apostrophecms-pro/multisite": "3.2.1-alpha.20220401",
+    "@apostrophecms-pro/palette": "3.0.0-alpha.20220401",
+    "apostrophe": "3.14.2-alpha.20220401",
     "node-fetch": "^2.6.5",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
