--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "1.3.0-alpha.20210331",
-    "@apostrophecms-pro/multisite": "3.3.0-alpha.20210331",
-    "@apostrophecms-pro/palette": "3.0.0-alpha.20210331",
-    "apostrophe": "3.16.1-alpha.20210331",
+    "@apostrophecms-pro/basics": "1.3.0-alpha.2022-04-18-01",
+    "@apostrophecms-pro/multisite": "3.3.0-alpha.2022-04-18-01",
+    "@apostrophecms-pro/palette": "3.0.0-alpha.2022-04-18-01",
+    "@opentelemetry/auto-instrumentations-node": "^0.27.4",
+    "@opentelemetry/exporter-jaeger": "^1.0.1",
+    "@opentelemetry/sdk-node": "^0.27.0",
+    "@opentelemetry/semantic-conventions": "^1.0.1",
+    "apostrophe": "3.17.0-alpha.2022-04-18-01",
     "node-fetch": "^2.6.5",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
