--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@apostrophecms-pro/basics": "1.3.0-alpha.2022050201",
-    "@apostrophecms-pro/multisite": "3.3.0-alpha.2022050201",
+    "@apostrophecms-pro/multisite": "3.5.0",
     "@apostrophecms-pro/palette": "3.0.0-alpha.2022050201",
     "@apostrophecms-pro/document-versions": "1.0.0-alpha.2022050201",
     "@opentelemetry/auto-instrumentations-node": "^0.27.4",
     "@opentelemetry/exporter-jaeger": "^1.0.1",
     "@opentelemetry/sdk-node": "^0.27.0",
     "@opentelemetry/semantic-conventions": "^1.0.1",
-    "apostrophe": "3.17.0-alpha.2022050201",
+    "apostrophe": "3.21.0",
     "node-fetch": "^2.6.5",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
