--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "1.3.0",
-    "@apostrophecms-pro/multisite": "3.5.0",
-    "@apostrophecms-pro/palette": "3.0.0",
-    "@apostrophecms-pro/document-versions": "1.0.1",
+    "@apostrophecms-pro/basics": "1.3.0-alpha.2022062101",
+    "@apostrophecms-pro/multisite": "3.5.0-alpha.2022062101",
+    "@apostrophecms-pro/palette": "3.0.0-alpha.2022062101",
+    "@apostrophecms-pro/document-versions": "1.0.1-alpha.2022062101",
     "@opentelemetry/auto-instrumentations-node": "^0.27.4",
     "@opentelemetry/exporter-jaeger": "^1.0.1",
     "@opentelemetry/sdk-node": "^0.27.0",
     "@opentelemetry/semantic-conventions": "^1.0.1",
-    "apostrophe": "3.21.1-alpha.2022060701",
+    "apostrophe": "3.22.1-alpha.2022062101",
     "node-fetch": "^2.6.5",
     "nodemon": "^2.0.7",
     "qs": "^6.9.6",
