--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@apostrophecms-pro/basics": "^1.3.0",
     "@apostrophecms-pro/document-versions": "^1.0.0",
-    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite#preprod-locale-subdomains",
+    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite",
     "@apostrophecms-pro/palette": "^3.0.0",
     "@opentelemetry/auto-instrumentations-node": "^0.27.4",
     "@opentelemetry/exporter-jaeger": "^1.2.0",
