--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/basics": "^1.3.0",
-    "@apostrophecms-pro/document-versions": "^1.0.0",
-    "@apostrophecms-pro/multisite": "^3.4.0",
-    "@apostrophecms-pro/palette": "^3.0.0",
+    "@apostrophecms-pro/basics": "1.3.0-alpha.2022081201",
+    "@apostrophecms-pro/document-versions": "1.0.1-alpha.2022081201",
+    "@apostrophecms-pro/multisite": "3.7.0-alpha.2022081201",
+    "@apostrophecms-pro/palette": "3.0.1-alpha.2022081201",
     "@opentelemetry/auto-instrumentations-node": "^0.27.4",
     "@opentelemetry/exporter-jaeger": "^1.2.0",
     "@opentelemetry/sdk-node": "^0.27.0",
     "@opentelemetry/semantic-conventions": "^1.2.0",
-    "apostrophe": "^3.18.0",
+    "apostrophe": "3.26.1-alpha.2022081201",
     "node-fetch": "^2.6.5",
     "nodemon": "^2.0.16",
     "qs": "^6.9.6",
