--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@apostrophecms-pro/basics": "^1.3.0",
     "@apostrophecms-pro/document-versions": "^1.0.1",
-    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite#feat/3909-suffix-and-locale",
+    "@apostrophecms-pro/multisite": "^3.8.0",
     "@apostrophecms-pro/palette": "^3.0.2",
     "@opentelemetry/auto-instrumentations-node": "^0.27.4",
     "@opentelemetry/exporter-jaeger": "^1.2.0",
