--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@apostrophecms-pro/document-versions": "^1.0.1",
     "@apostrophecms-pro/multisite": "^3.8.0",
     "@apostrophecms-pro/palette": "^3.0.2",
+    "@apostrophecms/import-export": "^1.0.1",
     "@opentelemetry/auto-instrumentations-node": "^0.37.1",
     "@opentelemetry/exporter-jaeger": "^1.15.0",
     "@opentelemetry/sdk-node": "^0.41.0",
@@ -37,8 +38,8 @@
   "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-apostrophe": "^4.0.0",
+    "nodemon": "^3.0.1",
     "stylelint": "^15.0.0",
-    "stylelint-config-apostrophe": "^3.0.0",
-    "nodemon": "^3.0.1"
+    "stylelint-config-apostrophe": "^3.0.0"
   }
 }
