--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
+    "@apostrophecms-pro/advanced-permission": "^2.0.0",
     "@apostrophecms-pro/basics": "^1.3.0",
     "@apostrophecms-pro/document-versions": "^1.0.1",
     "@apostrophecms-pro/multisite": "^3.8.0",
@@ -37,8 +38,8 @@
   "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-apostrophe": "^4.0.0",
+    "nodemon": "^3.0.1",
     "stylelint": "^15.0.0",
-    "stylelint-config-apostrophe": "^3.0.0",
-    "nodemon": "^3.0.1"
+    "stylelint-config-apostrophe": "^3.0.0"
   }
 }
