--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
+    "@apostrophecms-pro/advanced-permission": "^3.0.0",
     "@apostrophecms-pro/basics": "^1.4.1",
-    "@apostrophecms-pro/document-versions": "^1.2.0",
-    "@apostrophecms-pro/multisite": "^3.14.0",
-    "@apostrophecms-pro/palette": "^3.2.2",
+    "@apostrophecms-pro/document-versions": "^2.0.0",
+    "@apostrophecms-pro/multisite": "^3.15.0",
+    "@apostrophecms-pro/palette": "^4.0.0",
     "@opentelemetry/auto-instrumentations-node": "^0.37.1",
     "@opentelemetry/exporter-jaeger": "^1.15.0",
     "@opentelemetry/sdk-node": "^0.41.0",
     "@opentelemetry/semantic-conventions": "^1.15.0",
-    "apostrophe": "^3.63.0",
+    "apostrophe": "^4.0.0",
     "node-fetch": "^2.6.5",
     "qs": "^6.9.6",
     "require-all": "^3.0.0"
@@ -37,8 +38,8 @@
   "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-apostrophe": "^4.0.0",
+    "nodemon": "^3.0.1",
     "stylelint": "^15.0.0",
-    "stylelint-config-apostrophe": "^3.0.0",
-    "nodemon": "^3.0.1"
+    "stylelint-config-apostrophe": "^3.0.0"
   }
 }
