--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@apostrophecms-pro/basics": "^1.4.1",
     "@apostrophecms-pro/document-versions": "^2.0.0",
     "@apostrophecms-pro/multisite": "^3.14.0",
+    "@apostrophecms-pro/multisite-dashboard": "file:../multisite-dashboard",
     "@apostrophecms-pro/palette": "^4.0.1",
     "@opentelemetry/auto-instrumentations-node": "^0.37.1",
     "@opentelemetry/exporter-jaeger": "^1.15.0",
@@ -37,8 +38,8 @@
   "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-apostrophe": "^4.0.0",
+    "nodemon": "^3.0.1",
     "stylelint": "^15.0.0",
-    "stylelint-config-apostrophe": "^3.0.0",
-    "nodemon": "^3.0.1"
+    "stylelint-config-apostrophe": "^3.0.0"
   }
 }
