--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "@apostrophecms-pro/basics": "^1.4.1",
     "@apostrophecms-pro/document-versions": "^2.0.0",
-    "@apostrophecms-pro/multisite": "github:apostrophecms-pro/multisite#feature/multisite-dashboard",
-    "@apostrophecms-pro/multisite-dashboard": "github:apostrophecms-pro/multisite-dashboard#feature/multisite-dashboard",
+    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite#feature/multisite-dashboard",
+    "@apostrophecms-pro/multisite-dashboard": "github:apostrophecms/multisite-dashboard#feature/multisite-dashboard",
     "@apostrophecms-pro/palette": "^4.0.1",
     "@opentelemetry/auto-instrumentations-node": "^0.37.1",
     "@opentelemetry/exporter-jaeger": "^1.15.0",
