--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@opentelemetry/exporter-jaeger": "^1.15.0",
     "@opentelemetry/sdk-node": "^0.41.0",
     "@opentelemetry/semantic-conventions": "^1.15.0",
-    "apostrophe": "^4.1.1",
+    "apostrophe": "github:apostrophecms/apostrophe",
     "node-fetch": "^2.6.5",
     "qs": "^6.9.6",
     "require-all": "^3.0.0"
