--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@apostrophecms-pro/document-versions": "^2.2.1",
     "@apostrophecms-pro/multisite": "^4.0.1",
-    "@apostrophecms-pro/multisite-dashboard": "^1.0.1",
+    "@apostrophecms-pro/multisite-dashboard": "github:apostrophecms/multisite-dashboard",
     "@apostrophecms-pro/palette": "^4.1.0",
     "@opentelemetry/auto-instrumentations-node": "^0.46.1",
     "@opentelemetry/exporter-jaeger": "^1.24.1",
