--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-text-style": "^2.4.0",
     "accordion-js": "^3.3.4",
-    "apostrophe": "^4.3.2",
+    "apostrophe": "github:apostrophecms/apostrophe",
     "normalize.css": "^8.0.1",
     "require-all": "^3.0.0",
     "swiper": "^11.1.3"
