--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@apostrophecms-pro/multisite": "^4.0.1",
     "@apostrophecms-pro/multisite-dashboard": "^1.0.1",
     "@apostrophecms-pro/palette": "^4.1.0",
+    "@apostrophecms/favicon": "^1.1.1",
     "@opentelemetry/auto-instrumentations-node": "^0.46.1",
     "@opentelemetry/exporter-jaeger": "^1.24.1",
     "@opentelemetry/sdk-node": "^0.51.1",
