--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "starter-kit-assembly-essentials",
   "version": "2.0.0",
   "description": "A boilerplate for multisite content-management in Apostrophe",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "APOS_UPLOADFS_ASSETS=1 NODE_ENV=production bash -c 'node app @apostrophecms/asset:build --site=dashboard && ./scripts/for-each-theme @apostrophecms/asset:build'",
@@ -21,26 +22,26 @@
   "author": "Apostrophe Technologies",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apostrophecms-pro/document-versions": "^2.2.1",
-    "@apostrophecms-pro/multisite": "^4.0.1",
-    "@apostrophecms-pro/multisite-dashboard": "^1.0.1",
-    "@apostrophecms-pro/palette": "^4.1.0",
+    "@apostrophecms-pro/document-versions": "^2.3.1",
+    "@apostrophecms-pro/multisite": "github:apostrophecms/multisite#pro-6133-esm",
+    "@apostrophecms-pro/multisite-dashboard": "github:apostrophecms/multisite-dashboard#pro-6133-esm",
+    "@apostrophecms-pro/palette": "^4.3.1",
     "@opentelemetry/auto-instrumentations-node": "^0.46.1",
-    "@opentelemetry/exporter-jaeger": "^1.24.1",
+    "@opentelemetry/exporter-jaeger": "^1.26.0",
     "@opentelemetry/sdk-node": "^0.51.1",
-    "@opentelemetry/semantic-conventions": "^1.24.1",
-    "@tiptap/extension-text-style": "^2.4.0",
+    "@opentelemetry/semantic-conventions": "^1.27.0",
+    "@tiptap/extension-text-style": "^2.8.0",
     "accordion-js": "^3.3.4",
-    "apostrophe": "^4.5.2",
+    "apostrophe": "github:haroun/apostrophe",
+    "glob": "^10.4.5",
     "normalize.css": "^8.0.1",
-    "require-all": "^3.0.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-apostrophe": "^4.3.0",
-    "nodemon": "^3.1.1",
+    "nodemon": "^3.1.7",
     "stylelint": "^16.6.1",
-    "stylelint-config-apostrophe": "^4.0.0"
+    "stylelint-config-apostrophe": "^4.2.0"
   }
 }
